2012-04-23 josephgbr <rafael.f.f1@gmail.com>

    * 5187-1 :
	Updated to latest upstream revision
	
	* build() :
	Removed deprecated "-DFORCE_INTERNAL_SDL=TRUE", as GSdx now uses OpenGL
	
	* package() :
	Removed workaround to fix man page name - not needed anymore
	
2012-03-06 josephgbr <rafael.f.f1@gmail.com>

	* 5121-1 :
	Updated to latest upstream revision
	
	* build() :
	Sparsehash fixed in r5117 and therefore removed fix for its include dir
	
2011-02-13 josephgbr <rafael.f.f1@gmail.com>

	* 5093-1 :
	Updated to latest upstream revision
	
	* makedepends() :
	Renamed 'google-sparsehash' as 'sparsehash'
	
	* build() :
	Add fix for new include dir (changed from /usr/include/google/sparsehash/*
	to /usr/include/sparsehash/* without correct backward compatibility).
	Used 'sed' for this fix, so won't impact this auto-update package if PCSX2
	upstream fix on their source code.
	

2011-02-11 josephgbr <rafael.f.f1@gmail.com>

	* 5093-1 :
	Updated to latest upstream revision

	* depends :
	Added {lib32-}libgl.
	
	
2011-12-24 josephgbr <rafael.f.f1@gmail.com>

	* 5015-1 :
	Updated to latest upstream revision
	
	* depends :
	Moved {lib32-}gtk-engines from optdepends to depends, so user will
	always have a slightly better graphic interface experience.
	
	* package() :
	Fixed man page name format. Upstream delivers it in a file name that
	would result in wrong man page name in the package: pcsx2.man.gz. So,
	it is being rename to result in pcsx2.1.gz - which is correct.
	
	User configurations and preferences folder changed from $HOME/PCSX2 to
	$HOME/.config/PCSX2, to follow XGD Standards. User must move the memory
	cards, BIOS files, savegames, etc. to this new folder.
	
2011-09-04 josephgbr <rafael.f.f1@gmail.com>

	* 4910-1 :
	Updated to latest upstream revision
	
	* optdepends :
	Added {lib32-}gtk-engines to stop warnings about missing "clearlooks"
	
	* source, md5sums :
	Removed pcsx2.xpm and pcsx2.desktop, as they are part of default install
	
	* package() :