@@ -1,7 +1,7 @@
 # Maintainer: Gustavo Alvarez <sl1pkn07@gmail.com>
 
 pkgname=libaacs-git
-pkgver=20120418
+pkgver=20120508
 pkgrel=1
 pkgdesc="Advanced Access Content System (GIT version)"
 arch=('i686' 'x86_64')
@@ -30,7 +30,7 @@ build() {
     
     msg "GIT checkout done or server timeout"
     msg "Starting build..."
-	
+
     cd "${srcdir}"/"${_gitname}"-build
     ./bootstrap
     ./configure --prefix=/usr
