@@ -37,7 +37,6 @@ build() {
     source /etc/profile.d/jdk.sh
     ./bootstrap
     ./configure --prefix=/usr --with-jdk="${JAVA_HOME}" --enable-bdjava --disable-static
-    #make
     make {,doxygen-pdf}
 }
 
