@@ -3,8 +3,8 @@
 
 pkgname=mundus
 pkgdesc="Clean and backup your /home and /etc folder from old configuration files once created by uninstalled software."
-pkgver=1.3.0
-pkgrel=2
+pkgver=1.4.0
+pkgrel=1
 arch=('any')
 url="https://launchpad.net/mundus"
 license=('GPL')
@@ -16,7 +16,7 @@ depends=('gambas3-gb-image>=3.0.90' 'gambas3-gb-image<=3.99.0' 'gambas3-gb-qt4>=
 	 'gambas3-gb-form-stock>=3.0.90' 'gambas3-gb-form-stock<=3.99.0')
 makedepends=('gambas3-devel')
 source=(https://launchpad.net/$pkgname/trunk/$pkgver/+download/$pkgname-$pkgver.tar.gz)
-md5sums=('60ac620ca6316073a29b3994b94c3e59')
+md5sums=('3b72cbaa7d9999c353e67f759d50274a')
 
 build() {
   cd ${srcdir}/${pkgname}
