@@ -5,7 +5,7 @@
 # with "Release" in the line '-DCMAKE_BUILD_TYPE=' below
 
 pkgname=pcsx2-svn
-pkgver=5187
+pkgver=5201
 pkgrel=1
 pkgdesc="A PlayStation 2 emulator."
 arch=('i686' 'x86_64')
@@ -57,6 +57,7 @@ build() {
         -DCMAKE_INSTALL_PREFIX="/usr" \
         -DPLUGIN_DIR=${_plugindir} \
         -DGAMEINDEX_DIR="/usr/share/pcsx2" \
+        -DGLSL_SHADER_DIR="/usr/share/pcsx2" \
         -DXDG_STD=TRUE
 
     make
