@@ -1,8 +1,8 @@
-	# Maintainer: Fisher Duan <steamedfish@njuopen.com>
+# Maintainer: Fisher Duan <steamedfish@njuopen.com>
 # Maintainer: Vehicle Lee <imxifs@gmail.com>
 pkgname=sanguosha
-pkgver=3.4.3
-_pkgver=20110919
+pkgver=3.6.3
+_pkgver=20120312
 pkgrel=1
 pkgdesc="A Chinese board game, online version"
 arch=('i686' 'x86_64')
@@ -14,8 +14,9 @@ else
     depends=('adobe-air')
 fi
 makedepends=('unzip')
+
 source=(http://web.sanguosha.com/2/air/SanGuoSha.air sanguosha sanguosha.desktop)
-md5sums=('94571cec595a93f4795bbe979c844307'
+md5sums=('4db7c81142660020e7ab740d5a60ae7a'
          'caadd6f792483aaf98202bb4d51481bb'
          '5703da141c6edac3e4311f5023db3832')
 
