@@ -1,7 +1,7 @@
 # Maintainer: Daniel Wallace (gtmanfred) <daniel.wallace at gatech dot edu>
 pkgname=zurl
 pkgver=1.1.6
-pkgrel=1
+pkgrel=2
 pkgdesc="zsh url launcher, originally written to be used with URxvt keyboard-selet launcher. Does some Image sites. Currently developing"
 arch=('i686' 'x86_64')
 url="http://code.gtmanfred.com"
@@ -17,4 +17,4 @@ package() {
 }
 
 # vim:set ts=2 sw=2 et:
-md5sums=('669764c2e92293c200af9054d431c518')
+md5sums=('ac29697f1a2325b377425848612901b2')
