@@ -1,3 +1,11 @@
+2012-05-07 josephgbr <rafael.f.f1@gmail.com>
+
+    * 5201-1 :
+	Updated to latest upstream revision
+	
+	* build() :
+	Defined new variable GLSL_SHADER_DIR
+	
 2012-04-23 josephgbr <rafael.f.f1@gmail.com>
 
     * 5187-1 :
